# automexa

./: README.md  pubspec.yaml
.github/: FUNDING.yml
.github/workflows/: beta_compile.yaml
native_lib/: CMakeLists.txt  readme.md
package/automexa/: pubspec.yaml
package/automexa/example/: automexa_example.dart
package/automexa/lib/: automexa.dart
package/automexa/test/: automexa_test.dart
package/automexa_android/: pubspec.yaml
package/automexa_android/lib/: automexa_android.dart
package/automexa_android/test/: automexa_android_test.dart
package/automexa_apis/: pubspec.yaml
package/automexa_apis/example/: automexa_apis_example.dart
package/automexa_apis/lib/: automexa_apis.dart
package/automexa_apis/test/: automexa_apis_test.dart
package/automexa_cli/: README.md  pubspec.yaml
package/automexa_cli/example/: automexa_cli_example.dart
package/automexa_cli/lib/: automexa_cli.dart
package/automexa_cli/test/: automexa_cli_test.dart
package/automexa_client/: pubspec.yaml
package/automexa_client/example/: automexa_client_example.dart
package/automexa_client/lib/: automexa_client.dart
package/automexa_client/test/: automexa_client_test.dart
package/automexa_dart/: pubspec.yaml
package/automexa_dart/example/: automexa_dart_example.dart
package/automexa_dart/lib/: automexa_dart.dart
package/automexa_dart/test/: automexa_dart_test.dart
package/automexa_flutter/: pubspec.yaml
package/automexa_flutter/lib/: automexa_flutter.dart
package/automexa_flutter/test/: automexa_flutter_test.dart
package/automexa_fucshia/: pubspec.yaml
package/automexa_ios/: pubspec.yaml
package/automexa_linux/: pubspec.yaml
package/automexa_macos/: pubspec.yaml
package/automexa_server/: pubspec.yaml
package/automexa_web/: pubspec.yaml
package/automexa_windows/: pubspec.yaml
test/: automexa_test.dart
(+15 files in other folders)
